--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <!-- referencias a jquery -->
   <script src="libs/jquery.js" charset="utf-8"></script>
 
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
     <!-- uso de boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -45,7 +45,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
         <div class="container-fluid">
-          <img src="/assets/img/logo.jpeg" width="80" height="60">
+          <img src="assets/img/logo.jpeg" width="80" height="60">
           <a class="navbar-brand" href="#">TRANSPORTE TORRES </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -732,7 +732,7 @@
     <div class="container py-4">
       <div class="row">
         <div class="col-md-12 col-lg col-xl">
-          <img src="/assets/img/logo.jpeg" alt="" width="120" height="100">
+          <img src="assets/img/logo.jpeg" alt="" width="120" height="100">
           <p class="h5">Sedes:</p>
           <ul>
             <li>
@@ -786,7 +786,7 @@
   </footer>
   <!-- --------------------------------------------------- -->
 
-  <script src="./js/app.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 
